messages.css attempt 2

--- a/css/messages.css
+++ b/css/messages.css
@@ -6,47 +6,32 @@ body, html {
     font-family: Arial, Ubuntu, sans-serif;
     border: 10px;
 }
-.message-info{
+.message {
     border: 2px solid #D3D3D3;
     border-radius: 5px;
-    background-color: #CDDEFF;
-    color: darkblue;
     padding: 15px;
     margin: 10px;
     height: 5px;
     width: 750px;
     line-height: 1px;
+}
+
+
+.message-info{
+    background-color: #CDDEFF;
+    color: darkblue;
+
 }
 .message-success{
     background-color: #CFF3DA;
     color: darkgreen;
-    border: 2px solid #D3D3D3;
-    border-radius: 5px;
-    padding: 15px;
-    margin: 10px;
-    height: 5px;
-    width: 750px;
-    line-height: 1px;
 }
 .message-warning{
     background-color: #FCFBC9;
     color: sandybrown;
-    border: 2px solid #D3D3D3;
-    border-radius: 5px;
-    padding: 15px;
-    margin: 10px;
-    height: 5px;
-    width: 750px;
-    line-height: 1px;
 }
 .message-error{
     background-color: #FAD3D7;
     color: darkred;
-    border: 2px solid #D3D3D3;
-    border-radius: 5px;
-    padding: 15px;
-    margin: 10px;
-    height: 5px;
-    width: 750px;
-    line-height: 1px;
+
 }
