login.css attempt 2

--- a/css/login.css
+++ b/css/login.css
@@ -22,7 +22,7 @@ fieldset {
     -moz-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     margin: 1em;
-    padding: 1em 0 0 0;
+    padding: 1em;
     border: 0;
     background-color: #ffffff;
     /* There must be 1em between the content and the border of this element */
@@ -32,21 +32,20 @@ fieldset {
 
 .width-80 {
     width: 80%;
-    margin: 0 auto;
+    margin: auto;
     /* The element with this class should be 80% of the width and it must be centered */
     /* Read how to center elements with margin here: http://learnlayout.com/margin-auto.html*/
 }
 
 .form-group {
     width: 100%;
-    margin: .5em;
+    margin: .5em 0;
     /* This element must use 100% of the width */
     /* It should have a separation of .5em from elements on top of it and below it*/
 }
 
 .form-label {
     font-weight: bold;
-    margin: 8px;
     /* The text of a label must be bold */
 }
 
@@ -57,25 +56,26 @@ fieldset {
 
 .btn {
     padding: 8px;
-    margin: 10px 10px 15px 15px;
     color: #ffffff;
     font-weight: bold;
+    border: 1px lightgray solid;
     background-color: #0fb784;
-    width: calc(100% - 28px);
+    width: calc(100% - );
     /* There must be a separation of 8px between the text and the border of this element */
     /* The text color of this element should be white and bold */
     /* The border of this element should be 1px, and its color should be light grey */
 }
 
 .form-control {
-    margin: 4px .5em;
     /* There must be 4px on top of the text and below the text of an input with this class */
     /* It should have a separation of .5em from elements on top of it and below it */
-    width: calc(100% - 30px);
     /* You'll need to use the `calc` function to make the width of this element match the width of the button */
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-;
+    width: calc(100% - 4px);
+    padding : 4px 0;
+    margin: .5em 0;
+
 }
 
 
