--- a/css/messages.css
+++ b/css/messages.css
@@ -4,19 +4,14 @@ body, html {
     padding: 0;
     margin: 0;
     font-family: Arial, Ubuntu, sans-serif;
-    border: 10px;
 }
 .message {
     border: 2px solid #D3D3D3;
-    border-radius: 5px;
-    padding: 15px;
-    margin: 10px;
-    height: 5px;
-    width: 750px;
-    line-height: 1px;
+    border-radius: 3px;
+    padding: .5em;
+    margin: 1em auto;
+    width: 95vw;
 }
-
-
 .message-info{
     background-color: #CDDEFF;
     color: darkblue;
