--- a/css/flex-form.css
+++ b/css/flex-form.css
@@ -10,6 +10,7 @@ body {
     font-family: sans-serif;
     margin: 0;
     overflow: hidden;
+
 }
 
 .puppiness {
@@ -24,6 +25,7 @@ body {
     height: 100vh;
     width: 100%;
     /* TODO: add a flex container to this selector */
+    display: flex;
 }
 
 .flex-form {
@@ -32,6 +34,9 @@ body {
     border: 20px solid rgba(0, 0, 0, 0.3);
     border-radius: 5px;
     /* TODO: Add an automatic margin and a flex container to this selector */
+    display: flex;
+    margin: auto;
+
 }
 
 .flex-form > * {
@@ -56,4 +61,5 @@ body {
     /* TODO:
         Add an explicit size for items along the main axis of 15em.
         Read more about Flex Basis: https://java.codeup.com/appendix/further-reading/html-css/flexbox-additional-concepts/#flex-basis */
+    flex-basis: 15em;
 }
